...
        tab?: string
    }>()

    const { files, removeFile } = useAudioFiles()

    useScreenHeader({
        title: 'Analysis',
        backBehavior: {
          fallbackUrl: '/files',
        },
        rightElements: () => (<View style={{ flexDirection: 'row', alignItems: 'center' }}>
            <Pressable
                onPress={async () => {
...
